Mon Apr  1 19:45:41 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Component_Implementation.cpp:

          Checks the emulates_async trait when generating InEventPort
          implementations.

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/Traits.inl:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.inl:

          Added emulates_async trait.  Default is false, set to tru for ciao.

Wed Mar 27 14:59:10 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_Servant_T.cpp:

          Changed is_global to isprivate

        * cuts/iccm/arch/opensplice/servant/OpenSplice_Servant.cpp:

          Changed is_global to isprivate

        * etc/schemas/iccm/dds.xsd:

          Changed schema from scope="global|local" to isprivate="true|false"

        * tests/iccm/opensplice/ParticipantQoS/descriptors/ReceiverQoS.dpd:
        * tests/iccm/opensplice/ParticipantQoS/descriptors/SenderQoS.dpd:

          Updated the QoS to use isprivate.

        * cuts/iccm/ddsxml/dds.inl:
        * cuts/iccm/ddsxml/dds.cpp:
        * cuts/iccm/ddsxml/dds.h:

          Deleted these files

Wed Mar 27 13:43:34 UTC 2013  Dennis Feiock  <dfeiock at iupui dot edu>

        * cuts/iccm/arch/dds/servant/DDS_EventConsumer.h:
        * cuts/iccm/arch/dds/servant/DDS_EventConsumer.inl:
        * cuts/iccm/arch/dds/servant/DDS_EventConsumer_T.cpp:

          Configure now copies the QoS provided rather than storing it
          as a pointer

        * tests/iccm/opensplice/ParticipantQoS/descriptors/ReceiverQoS.dpd:
        * tests/iccm/opensplice/ParticipantQoS/descriptors/SenderQoS.dpd:

          Updated QoS to use a local scope rather than global
